[ash-md] Cancels app-list (launcher) before entering overview

This change proactively dismisses the app-list (launcher) when
overview mode is about to start. This prevents one of the top
level windows from being activated and disables accelerators that
target an active window while in overview mode.

BUG=631956
TEST=WindowSelectorTest.TextFilterActive

Review-Url: https://codereview.chromium.org/2225683008
Cr-Commit-Position: refs/heads/master@{#411049}

Former-commit-id: 738eca8c2bf6f6c0646408d9b970d5da83b53ba3